Update copyright to Art'Beau-Rescence • Ecosystem i

--- a/index.html
+++ b/index.html
@@ -843,8 +843,7 @@
     </section>
     
     <footer>
-        <p>© 2024 i-collect — Dakar, Sénégal</p>
-        <p>Art'Beau-Rescence • Ecosystem i</p>
+        <p>© Art'Beau-Rescence • Ecosystem i</p>
     </footer>
     
     <script>
