✨ Add intelligent chatbot integration
- Add glassmorphism chatbot widget
- Integrate with i-ecosystem chatbot API
- Add quick suggestions for user guidance
- Responsive design for mobile and desktop
- Powered by Google Gemini 2.5 Flash
- 62 documents indexed from ecosystem

--- a/index.html
+++ b/index.html
@@ -905,5 +905,9 @@
         //     }
         // });
     </script>
+    
+    <!-- i-CHATBOT -->
+    <link rel="stylesheet" href="./css/chatbot.css">
+    <script src="./js/chatbot.js"></script>
 </body>
 </html>
